<resources>
    <string name="aap_name">NewBLEUpdated</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="summary">Logs</string>

    <string name="settings">Settings</string>
    <string name="training_str">Exercises</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>

    <string name="sys">SYS (mmhg):</string>
    <string name="dia">DIA (mmhg):</string>
    <string name="pulse">PULSE:</string>

    <string name="Treatment_cycle">Treatment Cycle (20 Minutes)</string>

    <string name="cycle1_left">Cycle 1 (5m): Pending</string>
    <string name="cycle2_left">Cycle 2 (5m): Pending</string>
    <string name="cycle1_right">Cycle 1 (5m): Pending</string>
    <string name="cycle2_right">Cycle 2 (5m): Pending</string>
    <string name="lhs">Left Hand Device</string>
    <string name="rhs">Right Hand Device</string>
    <string name="registeruser">Register User</string>
    <string name="treatment_readings_text">Treatment Readings</string>

    <string name="history">History</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!--treatment-->

    <string name="starttreatment">START TREATMENT</string>

    <string name="selectdevice">SELECT DEVICE</string>
    <string name="righthanddevice">RIGH HAND DEVICE</string>

    <string name="batterylevelas">Battery Level After Start:</string>
    <string name="batterylevelae">Battery Level After End:</string>


    <!--ADD user-->
    <string name="namea">Username</string>
    <string name="namenew"> Enter Your Full Name</string>
    <string name="mobile"> Enter You Mobile No</string>
    <string name="pass">Enter Your Password</string>

    <string name="setpin">Set Treatment Pin</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="scan_your_product_id">Scan Your Product ID</string>
    <string name="your_product_id_is">Your Product ID is</string>
    <string name="assign_to_righ_hand">assign to righ hand</string>
    <string name="assign_to_left_hand">assign to left hand</string>
    <string name="rest">Rest</string>
    <string name="right_hand_device_id">right hand device id</string>
    <string name="left_hand_device_id">left hand device id</string>
    <string name="reset">reset</string>
</resources>
